# src/endpoints/mod.rs
@@ -7,11 +7,11 @@ pub mod common;
 pub mod earnings_transcript;
 pub mod financials;
 pub mod hours;
-pub mod movers;
 pub mod news;
 pub mod options;
 pub mod quote_summary;
 pub mod quote_type;
 pub mod quotes;
 pub mod recommendations;
+pub mod screeners;
 pub mod search;
